<resources>
    <string name="app_name">ChatApp</string>
    <string name="create_new_account">Create New Account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_here">Login Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>