<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarLogin"/>

    <TextView
        android:id="@+id/txtInfo1"
        android:textColor="@android:color/black"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        android:layout_below="@id/actionbarLogin"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/txtInfo1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/txtInfo2"
        android:layout_marginLeft="20dp" />
    <EditText
        android:id="@+id/txtEmailLogin"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/txtInfo1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="20dp" />


    <EditText
        android:id="@+id/txtPasswordLogin"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/txtEmailLogin"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/white"
        android:layout_marginRight="10dp"
        />

</RelativeLayout>